# workspace-back

./: .dockerignore  .env.docker.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  config.jsonc  dbinit.jsonc  example.jsonc  install.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260715_0001_initial_postgres_persistence.py  20260715_0002_render_artifact_blobs.py  20260715_0003_tenant_integrity_and_telemetry_retention.py  20260717_0004_resume_proposal_conflicted.py  20260718_0005_backfill_resume_render_jobs.py  20260721_0006_observability_signal_envelope.py  20260721_0007_protect_alembic_version_table.py  20260722_0008_api_v2_migration_audit.py  20260722_0009_oauth_authorization_requests.py  20260722_0010_oauth_tokens.py  20260722_0011_hosted_identity_flows.py  20260722_0012_identity_credentials.py  20260723_0013_v2_identity_workspace.py  20260723_0014_v2_idempotency.py  20260723_0015_v2_maintenance.py  20260723_0016_v2_resume_persistence.py  20260723_0017_v2_platform_persistence.py  20260723_0018_identity_session_token_binding.py  20260723_0019_v2_knowledge_persistence.py  20260723_0020_identity_email_outbox.py  20260723_0021_v2_agent_persistence.py  20260723_0022_v2_interview_persistence.py  20260723_0023_v2_outbox_dispatch_leases.py  20260723_0024_knowledge_external_security.py  20260723_0025_account_deletion_execution.py  20260723_0026_job_cancellation_compensation.py  20260723_0027_outbox_notification_lifecycle.py  20260723_0028_knowledge_version_timestamps.py
deploy/docker/: dbinit.jsonc  postgres-init.sh
deploy/nginx/: ai-job-workspace.conf
docs/: API_V2_HANDOFF.md  API_V2_IMPLEMENTATION.md  CONTRACT_GAPS.md  FRONTEND_BACKEND_INTEGRATION_HANDOFF.md  FRONTEND_DIAGNOSTICS.md  FRONTEND_KNOWLEDGE_INGESTION_HANDOFF.md
docs/decisions/: 0001-stage-one-resume-knowledge.md  0002-personal-knowledge-file-ingestion.md  0003-observability-platform.md  0004-dbctl-layered-domain-architecture.md  0005-dbctl-operator-diagnostics.md
scripts/: verify_multimodal_interview.py  verify_pdf_interview.py  verify_runtime_multimodal_interview.sh  verify_runtime_pdf_interview.sh
src/backend/: __init__.py  __main__.py  app.py  composition.py  config.py  package_resources.py
src/backend/api/: __init__.py  constants.py  diagnostics.py  errors.py  identity.py  interview_realtime.py  models.py  oauth.py  (+11 more)
src/dashboard/: __init__.py  __main__.py  access.py  api.py  bootstrap.py  cli.py  composition.py  config.py  errors.py  gui.py  models.py  ports.py  repositories.py  service.py
src/dbctl/: __init__.py  __main__.py  bootstrap.py  cli.py  composition.py  config.py  connection.py  container_entrypoint.py  credentials.py  domain.py  errors.py  identifiers.py  migration.py  package_resources.py  retention.py  runners.py  shell.py
src/workspace_shared/: __init__.py  ids.py  jsonc.py  observability.py  tenancy.py
tests/: conftest.py  test_agent_flow.py  test_alembic_version_privileges_migration.py  test_api_v2_contract.py  test_api_v2_migration.py  test_application_boundaries.py  test_backend_observability.py  test_configuration_examples.py  test_console_entrypoints.py  test_container_deployment.py  test_contract_bundle.py  test_dashboard_architecture.py  test_dashboard_flow.py  test_dashboard_policy.py  test_dashboard_postgres_queries.py  test_dbctl_architecture.py  test_dbctl_credentials.py  test_dbctl_domain_model.py  test_dbctl_operator_experience.py  test_dbctl_safety.py  test_dbctl_telemetry_retention.py  test_diagnostics_api.py  test_frontend_integration_boundary.py  test_github_actions_workflows.py  test_hosted_identity_flows.py  test_hosted_identity_management.py  test_hosted_identity_migration.py  test_hosted_identity_passkey.py  test_hosted_identity_password_flow.py  test_hosted_identity_reauthentication.py  test_http_boundary.py  test_identity_boundary.py  test_identity_email_outbox.py  test_identity_email_outbox_config.py  test_identity_email_outbox_postgres.py  test_identity_session_token_binding.py  test_interview_config.py  test_interview_flow.py  test_knowledge_config.py  test_knowledge_file_flow.py  (+78 more)
(+176 files in other folders)
