[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-job-workspace-backend"
version = "0.1.0"
description = "AI 赋能求职 Workspace 的模块化单体后端"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "AI Job Workspace" }]
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=46,<47",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "json5>=0.12,<1",
  "jsonschema>=4.23,<5",
  "langchain-core>=1.0,<2",
  "pgvector>=0.3,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.11,<3",
  "pypdf>=5.6,<7",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "rich>=14,<15",
  "sqlalchemy[asyncio]>=2.0.40,<3",
  "uvicorn[standard]>=0.34,<1",
  "webauthn>=2.2,<3",
]

[project.optional-dependencies]
gui = [
  "matplotlib>=3.10.7,<4",
  "plotly>=6,<7",
  "PyQt6>=6.8,<7",
]
dev = [
  "httpx2>=2.7,<3",
  "mypy>=1.15,<2",
  "plotly>=6,<7",
  "pytest>=8.3,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.11,<1",
]

[project.scripts]
backend = "backend.__main__:main"
dashboard = "dashboard.__main__:main"
dashboard-api = "dashboard.interfaces.api:main"
dashboard-gui = "dashboard.interfaces.gui:main"
dbctl = "dbctl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/dashboard", "src/dbctl", "src/workspace_shared"]

[tool.hatch.build.targets.wheel.force-include]
"alembic" = "dbctl/resources/alembic"
"example.jsonc" = "dbctl/resources/example.jsonc"
"dbinit.jsonc" = "dbctl/resources/dbinit.jsonc"
"workspace-shared-docs/contracts/v1/ai-job-workspace.contract.schema.json" = "backend/resources/ai-job-workspace.contract.schema.json"
"workspace-shared-docs/contracts/v2/schema.jsonc" = "backend/resources/api-v2.schema.jsonc"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
# 中文 Doxygen 文档必须保留中文标点；RUF001/RUF002/RUF003 对其报错没有质量收益。
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
packages = ["backend", "dashboard", "dbctl", "workspace_shared"]

[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true
